github-project/deployment/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: dev
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 80 # This is the internal port exposed to the cluster
      targetPort: 8080 # This MUST match your deployment's containerPort
